Revision history for Perl extension Module::Build.

0.27_03

 - Our POD parser will now accept "AUTHORS" as well as "AUTHOR" when
   looking for the author list in a module. [David Wheeler]

 - When looking for the POD to auto-generate a README file, or for the
   AUTHOR or ABSTRACT for the distribution, we now also look for a
   *.pod with the same name as the *.pm file specified by
   'version_from'. [David Golden]

 - The recommended dependency on ExtUtils::ParseXS has been moved into
   the "C_support" auto_feature.

 - When building XS files, we now pass the -DVERSION and -DXS_VERSION
   flags to the compiler. [Suggested by Jerry Hedden]

 - If a distribution has XS files and Module::Build has not been
   configured with the "C_support" feature, we now issue a
   warning. [Suggested by Jerry Hedden]

 - The synonyms 'scripts' and 'prereq' for 'script_files' and
   'requires' were broken in a previous version (0.27_01, probably),
   but now they're fixed. [David Golden]
 
 - Previously, we assumed that any custom subclass of Module::Build
   was located in _build/lib/.  This is only true if the author used
   the subclass() method, though.  We now use %INC to find where the
   custom subclass really is, so that we can "use lib" it.  We also
   issue a warning if it seems to be outside the build directory.
   [Spotted by Peter Tandler]

 - Added a dir_contains() method.

 - If the user passes a no_index parameter to our constructor, we now
   pass that through when building the META.yml file. [Richard
   Soderberg, RT #9603]

 - Some versions of MakeMaker, CPANPLUS, and/or PAUSE thought that a
   certain line of our code was declaring a $VERSION when we didn't
   intend to.  The line has been obscurified so they won't think that
   anymore. [Jos Boumans, RT #14226]

 - We now use ExtUtils::CBuilder to do all compiling of C code (for
   example, when compiling XS modules).  (This change actually